# binanceAlphaGrid

./: .gitignore  README.md  main.py  pyproject.toml
config/: live.toml  strategy.example.toml  testnet.live.toml
config/abi/: uniswap_v2_router.json
data/: _debug_state_store.db  alpha_grid_bsc_testnet.db  alpha_grid_live.db  alpha_grid_state.db
doc/: binance_alpha_dual_side_strategy_spec.md  bsc_live_rollout_progress.md  bsc_mainnet_rollout_runbook.md
src/: app.py  cli.py  evm.py
src/core/: __init__.py  config.py  helpers.py  models.py
src/modules/: config_guard.py  execution.py  grid.py  preflight.py  quote.py  reference_price.py  reporter.py  risk.py  state_store.py  universe.py
