[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "binance-alpha-grid"
version = "0.1.0"
description = "Runnable BSC alpha dual-side grid bot with dry-run, paper, and live execution paths"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
live = ["web3>=7,<8"]

[project.scripts]
alpha-grid = "cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cli"]

[tool.setuptools.packages.find]
where = ["src"]
